Fixed some spacing and alignment issues.

--- a/css/books.styl
+++ b/css/books.styl
@@ -3,6 +3,10 @@
   margin-left auto
   margin-right auto
 
+  @media medium
+    margin-left 0
+    margin-right 0
+
 .book-group__cover
 .book-group__cover:link
 .book-group__cover:visited
@@ -99,6 +103,25 @@
   color #999
   font-family Baskerville,Palatino,"Book Antiqua",Georgia,serif
   font-style italic
+
+.book-group__buttons
+  padding-bottom 1.5rem
+
+  border-bottom 1px solid brand-medium-grey
+
+  text-align center
+
+  @media medium
+    padding-bottom 0
+
+    border 0
+
+    text-align left
+
+.book-group__item:last-child .book-group__buttons
+  padding-bottom 0
+
+  border 0
 
 .book
   background transparent no-repeat left top
